[package]
name = "math"
version = "0.1.0"
authors = ["Nick Massey <nickmass@nickmass.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
bytemuck = {version = "1.13.0", optional = true}
fastrand = "1.8.0"
glium = {version = "0.31.0", optional = true}
